deployments/cavetown/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cavetown-service
  namespace: cavetown
spec:
  type: ClusterIP
  selector:
    app: cavetown
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
